--- a/index.html
+++ b/index.html
@@ -128,19 +128,47 @@
         <p>Portfolio</p>
         <h2><span>Latest</span> Project</h2>
       </div>
+
       <div class="portfolio-content">
         <div class="row">
-          <img src="./img/2.jpg" alt="Project 1" />
+          <img src="./img/2.jpg" alt="" width="700px" />
           <div class="layer">
             <h5>Visual Design</h5>
             <p>
-              Check out 10 Best Design's updates for the top web design &
+              Check out 10 Best Design's updates for the top web disign &
               development companies.
             </p>
             <a href="#"><i class="bx bx-link-external"></i></a>
           </div>
         </div>
-        <!-- Repeat .row for other projects -->
+
+        <div class="row">
+          <img src="./img/2.jpg" alt="" width="700px" />
+          <div class="layer">
+            <h5>Visual Design</h5>
+            <p>
+              Check out 10 Best Design's updates for the top web disign &
+              development companies.
+            </p>
+            <a href="#"><i class="bx bx-link-external"></i></a>
+          </div>
+        </div>
+
+        <div class="row">
+          <img src="./img/2.jpg" alt="" width="700px" />
+          <div class="layer">
+            <h5>Visual Design</h5>
+            <p>
+              Check out 10 Best Design's updates for the top web disign &
+              development companies.
+            </p>
+            <a href="#"><i class="bx bx-link-external"></i></a>
+          </div>
+        </div>
+
+
+
+
       </div>
     </section>
 
