change texts and styles

--- a/index.html
+++ b/index.html
@@ -40,13 +40,24 @@
         </div>
         <h1>Ehsan Atashkar</h1>
         <h3>Web <span>Developer.</span></h3>
+        <div class="social-icons">
+          <a href="https://github.com/xe4at"><i class="bx bxl-github"></i></a>
+          <a href="https://t.me/xe4at"><i class="bx bxl-telegram"></i></a>
+          <a
+            href="https://www.instagram.com/ehsanatashkar.js?igsh=cmtiaHU3NWM1c3Mz&utm_source=qr"
+            ><i class="bx bxl-instagram-alt"></i
+          ></a>
+          <a href="https://www.linkedin.com/in/ehsan-atashkar-0a8b09326/"
+            ><i class="bx bxl-linkedin"></i
+          ></a>
+        </div>
         <p>
           Web Developer with 2+ years experience that keeps customers coming
           back for services with the best effort.
         </p>
         <div class="button">
           <a href="#" class="btn">Say Hello</a>
-          <a href="#" class="btn2"
+          <a href="https://github.com/xe4at" class="btn2"
             ><span><i class="bx bx-play"></i></span>Watch My Work</a
           >
         </div>
@@ -56,21 +67,27 @@
     <!-- About Section Design -->
     <section class="about" id="about">
       <div class="about-img">
-        <img src="./img/white and black.JPG" alt="About Me" />
+        <img src="./img/profile.JPG" alt="About Me" />
       </div>
       <div class="about-text">
         <h2>About <span>Me</span></h2>
-        <h4>Creative UI/UX Designer!</h4>
+        <h4>Web Developer & Designer</h4>
         <p>
-          Check out 10 Best Design's updates for the top web design &
-          development companies for your needs by reviewing our list &
-          development companies! Find the best web design. Web Design
-          Consulting. Comprehensive Directory. Top Reviewed Design Firms. Types:
-          Enterprise Design Firms, Startup Design Firms, Custom Design Firms,
-          eCommerce Design Firms, App Design Firms. Custom Web Solution. 24x7
-          Customer Support. Secure Payment Gateway. Get A Free Web Quote. 24/7
-          Chat Support. Services: Web Page Design, Landing Page Design, App
-          Development, Mobile Website Design.
+          I'm a passionate Web Developer with over 2 years of hands-on
+          experience in creating modern web applications. My expertise spans
+          across various frontend and backend technologies, with a strong
+          foundation in JavaScript and its ecosystem. I have extensive
+          experience working with popular frameworks and libraries like React,
+          and Next.js, allowing me to build robust and scalable solutions. What
+          sets me apart is my creative approach to problem-solving and my
+          constant drive to learn and adapt to new technologies. I pride myself
+          on writing clean, maintainable code and creating intuitive user
+          interfaces that enhance the user experience. Whether it's developing
+          responsive websites, optimizing application performance, or
+          implementing complex features, I'm always up for the challenge. I'm
+          particularly enthusiastic about staying current with the latest web
+          development trends and best practices, ensuring that my skills remain
+          sharp and relevant in this ever-evolving field.
         </p>
         <a href="#" class="btn">More About</a>
       </div>
@@ -85,25 +102,25 @@
       <div class="services-content">
         <div class="box">
           <div class="s-icons">
-            <i class="bx bx-mobile-alt"></i>
+            <i class="bx bx-code-alt"></i>
           </div>
-          <h3>Web Design</h3>
+          <h3>Frontend Development</h3>
           <p>
-            One way to categorize the activities is in terms of the
-            professional's area of expertise such as competitive analysis,
-            corporate strategy.
+            Expert in modern frontend development using React and Next.js.
+            Building fast, interactive, and user-friendly web applications with
+            clean code practices and optimal performance.
           </p>
           <a href="#" class="read">Read More</a>
         </div>
         <div class="box">
           <div class="s-icons">
-            <i class="bx bx-code-alt"></i>
+            <i class="bx bx-mobile-alt"></i>
           </div>
-          <h3>Web Development</h3>
+          <h3>Responsive Web Design</h3>
           <p>
-            One way to categorize the activities is in terms of the
-            professional's area of expertise such as competitive analysis,
-            corporate strategy.
+            Crafting modern and responsive websites that look perfect on all
+            devices. Skilled in CSS frameworks, modern design principles, and
+            creating engaging user interfaces with smooth animations.
           </p>
           <a href="#" class="read">Read More</a>
         </div>
@@ -111,11 +128,12 @@
           <div class="s-icons">
             <i class="bx bx-edit-alt"></i>
           </div>
-          <h3>Creative Design</h3>
+          <h3>UI/UX Design</h3>
           <p>
-            One way to categorize the activities is in terms of the
-            professional's area of expertise such as competitive analysis,
-            corporate strategy.
+            Creating intuitive and visually appealing user interfaces with
+            modern design trends. Focusing on user experience, interactive
+            prototypes, and clean design systems that enhance user engagement
+            and satisfaction.
           </p>
           <a href="#" class="read">Read More</a>
         </div>
@@ -131,44 +149,46 @@
 
       <div class="portfolio-content">
         <div class="row">
-          <img src="./img/2.jpg" alt="" width="700px" />
+          <img src="./img/crypto-app.png" alt="Crypto App Screenshot" width="700px" />
           <div class="layer">
-            <h5>Visual Design</h5>
+            <h5>Crypto App</h5>
             <p>
-              Check out 10 Best Design's updates for the top web disign &
-              development companies.
+              A modern cryptocurrency tracking application built with React.
+              Features real-time price updates, detailed crypto information, and
+              interactive charts for market analysis.
             </p>
-            <a href="#"><i class="bx bx-link-external"></i></a>
+            <a href="https://crypto-app-five-pearl.vercel.app/" target="_blank"
+              ><i class="bx bx-link-external"></i>
+            </a>
           </div>
         </div>
 
         <div class="row">
-          <img src="./img/2.jpg" alt="" width="700px" />
+          <img src="./img/library-app.png" alt="Library App Screenshot" width="700px" />
           <div class="layer">
-            <h5>Visual Design</h5>
+            <h5>Library Management App</h5>
             <p>
-              Check out 10 Best Design's updates for the top web disign &
-              development companies.
+              A comprehensive library management system built with React. 
+              Features include book cataloging, search functionality, and a modern interface for easy book tracking.
             </p>
-            <a href="#"><i class="bx bx-link-external"></i></a>
+            <a href="https://mini-contact-app.vercel.app/" target="_blank"><i class="bx bx-link-external"></i></a>
           </div>
         </div>
 
         <div class="row">
-          <img src="./img/2.jpg" alt="" width="700px" />
+          <img src="./img/login-page.png" alt="More Projects" width="700px" />
           <div class="layer">
-            <h5>Visual Design</h5>
+            <h5>More Projects Available</h5>
             <p>
-              Check out 10 Best Design's updates for the top web disign &
-              development companies.
+              These are just sample projects. I have developed larger
+              applications including a Divar-like platform. Visit my GitHub
+              profile or contact me via email to see more advanced projects.
             </p>
-            <a href="#"><i class="bx bx-link-external"></i></a>
+            <a href="https://github.com/xe4at" target="_blank"
+              ><i class="bx bx-link-external"></i
+            ></a>
           </div>
         </div>
-
-
-
-
       </div>
     </section>
 
@@ -183,14 +203,18 @@
         </p>
         <div class="lists">
           <li><a href="#">+98 0939-142-9334</a></li>
-          <li><a href="#">ehsandev84@gmail.com</a></li>
-          <li><a href="#">Like Share & Subscribe</a></li>
+          <li><a href="#">ehsanwebdev84@gmail.com</a></li>
         </div>
         <div class="contact-icons">
-          <a href="#"><i class="bx bxl-facebook"></i></a>
-          <a href="#"><i class="bx bxl-twitter"></i></a>
-          <a href="#"><i class="bx bxl-instagram-alt"></i></a>
-          <a href="#"><i class="bx bxl-youtube"></i></a>
+          <a href="https://github.com/xe4at"><i class="bx bxl-github"></i></a>
+          <a href="https://t.me/xe4at"><i class="bx bxl-telegram"></i></a>
+          <a
+            href="https://www.instagram.com/ehsanatashkar.js?igsh=cmtiaHU3NWM1c3Mz&utm_source=qr"
+            ><i class="bx bxl-instagram-alt"></i
+          ></a>
+          <a href="https://www.linkedin.com/in/ehsan-atashkar-0a8b09326/"
+            ><i class="bx bxl-linkedin"></i
+          ></a>
         </div>
       </div>
       <div class="contact-form">
