--- a/index.html
+++ b/index.html
@@ -218,19 +218,18 @@
         </div>
       </div>
       <div class="contact-form">
-        <form action="">
-          <input type="name" placeholder="Your Name" required />
-          <input type="email" placeholder="Your Email Address" required />
-          <input type="text" placeholder="Your Mobile Number" required />
+        <form id="contactForm">
+          <input type="text" name="name" placeholder="Your Name" required />
+          <input type="email" name="email" placeholder="Your Email Address" required />
+          <input type="text" name="phone" placeholder="Your Mobile Number" required />
           <textarea
-            name=""
-            id=""
+            name="message"
             cols="35"
             rows="10"
             placeholder="How Can I Help You"
             required
           ></textarea>
-          <input type="submit" value="Send Message" class="submit" required />
+          <button type="submit" class="submit">Send Message</button>
         </form>
       </div>
     </section>
@@ -245,6 +244,9 @@
       </div>
     </section>
 
+    <!-- EmailJS CDN -->
+    <script src="https://cdn.jsdelivr.net/npm/@emailjs/browser@3/dist/email.min.js"></script>
+    
     <!-- Custom JS Link -->
     <script src="./script.js"></script>
   </body>
