change project link

--- a/index.html
+++ b/index.html
@@ -149,7 +149,11 @@
 
       <div class="portfolio-content">
         <div class="row">
-          <img src="./img/crypto-app.png" alt="Crypto App Screenshot" width="700px" />
+          <img
+            src="./img/crypto-app.png"
+            alt="Crypto App Screenshot"
+            width="700px"
+          />
           <div class="layer">
             <h5>Crypto App</h5>
             <p>
@@ -164,14 +168,21 @@
         </div>
 
         <div class="row">
-          <img src="./img/library-app.png" alt="Library App Screenshot" width="700px" />
+          <img
+            src="./img/library-app.png"
+            alt="Library App Screenshot"
+            width="700px"
+          />
           <div class="layer">
             <h5>Library Management App</h5>
             <p>
-              A comprehensive library management system built with React. 
-              Features include book cataloging, search functionality, and a modern interface for easy book tracking.
+              A comprehensive library management system built with React.
+              Features include book cataloging, search functionality, and a
+              modern interface for easy book tracking.
             </p>
-            <a href="https://mini-contact-app.vercel.app/" target="_blank"><i class="bx bx-link-external"></i></a>
+            <a href="https://basic-library-app-1r78.vercel.app/" target="_blank"
+              ><i class="bx bx-link-external"></i
+            ></a>
           </div>
         </div>
 
@@ -220,8 +231,18 @@
       <div class="contact-form">
         <form id="contactForm">
           <input type="text" name="name" placeholder="Your Name" required />
-          <input type="email" name="email" placeholder="Your Email Address" required />
-          <input type="text" name="phone" placeholder="Your Mobile Number" required />
+          <input
+            type="email"
+            name="email"
+            placeholder="Your Email Address"
+            required
+          />
+          <input
+            type="text"
+            name="phone"
+            placeholder="Your Mobile Number"
+            required
+          />
           <textarea
             name="message"
             cols="35"
@@ -246,7 +267,7 @@
 
     <!-- EmailJS CDN -->
     <script src="https://cdn.jsdelivr.net/npm/@emailjs/browser@3/dist/email.min.js"></script>
-    
+
     <!-- Custom JS Link -->
     <script src="./script.js"></script>
   </body>
