add loading and change button's style

--- a/index.html
+++ b/index.html
@@ -270,5 +270,13 @@
 
     <!-- Custom JS Link -->
     <script src="./script.js"></script>
+
+    <!-- Loading Overlay -->
+    <div class="loading-overlay">
+      <div class="loading-spinner">
+        <div class="spinner"></div>
+        <p>Sending Message...</p>
+      </div>
+    </div>
   </body>
 </html>
