--- a/index.html
+++ b/index.html
@@ -209,8 +209,7 @@
         <h2>Contact <span>Me!</span></h2>
         <h4>If You Have Any Project In Your Mind.</h4>
         <p>
-          I'm a UI/UX Designer - creating bold & brave interface design for
-          companies all across the world.
+          I'm a Web Developer & Designer - creating modern and responsive web applications with clean code and beautiful user interfaces.
         </p>
         <div class="lists">
           <li><a href="#">+98 0939-142-9334</a></li>
